corrected a minor typo - changed ast to star

--- a/report.tex
+++ b/report.tex
@@ -206,7 +206,7 @@ The set $S$ together with the operation $\star$ is an associative $\integers$-al
 \begin{proof}
 Given $f,g,h\in S$ and $(L,L''')\in\dblflags$,
 \begin{align*}
-((f\ast g)\star h)(L,L''')
+((f\star g)\star h)(L,L''')
 &= \sum_{L''} (f\star g)(L,L'')h(L'',L''')\\
 &= \sum_{L''}\sum_{L'} f(L,L')g(L',L'')h(L'',L''')\\
 &= (f\star (g\star h))(L,L'''),
